7-WeaveScope/3-scope-ext-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: scope-dashboard-ext
  namespace: weave
  labels:
    traffic-type: external
  annotations:
    traefik.frontend.rule.type: PathPrefix
spec:
  rules:
  - host: scope.ext.perkplex.geekgalaxy.com
    http:
      paths:
      - path: /
        backend:
          serviceName: weave-scope-app
          servicePort: 80
